added logic to type 2 selection and no type one selection. converted results to div and decorated double results

--- a/findCounters.html
+++ b/findCounters.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Find Pokemon Go Type Counters</h1>
+        <div id="head">
+            <h1>Find Pokemon Go Type Counters</h1>
+        </div>
     </header>
     <article>
         <div>
