--- a/findCounters.html
+++ b/findCounters.html
@@ -13,18 +13,23 @@
         </div>
     </header>
     <article>
-        <div>
-            <label for="type" id="typeLabel">Which type do you need counters for?</label><br>
-            <select name="type" id="typeForCounter1">
-                <option value="None" selected>Type 1</option>
-            </select>
-            <select name="type" id="typeForCounter2">
-                <option value="None" selected>Type 2</option>
-            </select><br>
-            <button id="goButton" onclick="findCounter()">Find Counters</button>
-        </div>
-        <div id="results" >
-            Test
+        <div id="main">
+            <div>
+                <label for="type" id="typeLabel">Which type do you need counters for?</label><br>
+                <select name="type" id="typeForCounter1">
+                    <option value="None" selected>Type 1</option>
+                </select>
+                <select name="type" id="typeForCounter2">
+                    <option value="None" selected>Type 2</option>
+                </select><br>
+                <button id="goButton" onclick="findCounter()">Find Counters</button>
+            </div>
+            <div id="results" >
+                Test
+            </div>
+            <div id="pokeball">
+                <img src="./img/pokeball.png" height="150" width="150" alt="pokeball transparent background" />
+            </div>
         </div>
     </article>
     <script src="./js/findCounters.js"></script>
